--- a/index.html
+++ b/index.html
@@ -342,7 +342,30 @@
         </div>
       </div>
     </div>
+
+    <h2 class="mt-5">Colors</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4 justify-content-start">
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Colors</h5>
+            <a href="http://clrs.cc/" class="card-link">Home</a>
+            <a href="https://github.com/mrmrs/colors" class="card-link">Repo</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Open Colors</h5>
+            <a href="https://yeun.github.io/open-color/" class="card-link">Home</a>
+            <a href="https://github.com/yeun/open-color" class="card-link">Repo</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
