Update SCSS and Component sections

--- a/index.html
+++ b/index.html
@@ -319,6 +319,24 @@
           </div>
         </div>
       </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Fomantic-UI</h5>
+            <a href="https://fomantic-ui.com/" class="card-link">Home</a>
+            <a href="https://github.com/fomantic/fomantic-ui/" class="card-link">Repo</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Blaze UI</h5>
+            <a href="https://www.blazeui.com/" class="card-link">Home</a>
+            <a href="https://github.com/BlazeSoftware/atoms" class="card-link">Repo</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <h2 class="mt-5">SCSS</h2>
@@ -329,6 +347,15 @@
             <h5 class="card-title">Spruce CSS</h5>
             <a href="https://sprucecss.com" class="card-link">Home</a>
             <a href="https://github.com/conedevelopment/sprucecss" class="card-link">Repo</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Cirrus</h5>
+            <a href="https://cirrus-ui.com/" class="card-link">Home</a>
+            <a href="https://github.com/Spiderpig86/Cirrus" class="card-link">Repo</a>
           </div>
         </div>
       </div>
