Add Other Sites section

--- a/index.html
+++ b/index.html
@@ -391,6 +391,12 @@
         </div>
       </div>
     </div>
+
+    <h2 class="mt-5">Other Sites</h2>
+    <ul>
+      <li><a href="https://plainvanillaweb.com/index.html">Plain Vanilla</a></li>
+      <li><a href="https://www.cssbed.com/">CSS Bed</a></li>
+    </ul>
   </div>
 </div>
   <!-- JS -->
